0025 ReplicatorG
New features:
* Print-O-Matic integrated and enabled by default
* Store/recall home position support: No more need to modify start.gcode when your Z height changes.
* Drag & Drop support: drop .stl or .gcode files into ReplicatorG to open them.
* Frostruder support for Thing-O-Matic
* Support for local firmware.xml files (file:// urls)
* Support for internet proxies, using the default Java proxy configuration.
* Added Skeinforge 40, for experimental purposes
* Updates to most core libraries
* Skeinforge 35 is now default
* Wipe commands removed from cupcake profiles
* HPB default temperature lowered to 110 degrees

Bug fixes:
* Rewritten gcode execution engine: fixes many bugs, such as 'gcode parser is null'
* Homing feedrate specified in machine profile
* Numerous Ultimaker, RaMPS, and RepRap improvements
* Numerous UI tweaks to improve look&feel on OS X
* Resize main window so tooltips don't refresh the whole view


0024 ReplicatorG
* Support for stepper-based extruders on G4 hardware
* Early reversal for stepper-driven extruders
* 5-axis motion commands for G4 hardware
* More example objects and scripts
* Build temperature monitoring reenabled
* Number of UI cleanups
* Skeinforge 39 introduced as experimental
* Improved extruder status reporting
* Several memory leaks solved
* 64-bit platform fixes for Mac OS X, x86_64
* Added s3g decompilation script
* Startup info dump to aid debugging
* Continuous jog and motion stop commands
* Improved Ultimaker support
* Support for legacy RepRap firmware
* Improvements to serial layer
* Scale field reflects mouse scaling factor
* Skeinforge 31 reintroduced for Ultimaker

0023 ReplicatorG
* Bugfix release
* Fix machine profiles to handle correct endstops and platform sizes
* Fix too-hot 0006 TOM profiles
* Added emergency stop button to control panel
* Readded raft checkbox on Skeinforge 0006
* Removed Skeinforge 31


0022 ReplicatorG
* UI for selecting basic skeinforge options