@@ -1,3 +1,5 @@
+0026_Alpha ReplicatorG
+
 0025 ReplicatorG
 New features:
 * Print-O-Matic integrated and enabled by default
